# locally

./: .env  LICENSE  pyproject.toml  sample.env
.github/workflows/: code_linting.yml
alembic/: env.py
alembic/versions/: bcf52e0f5fe0_initial_migration.py
app/: main.py
app/api/: __init__.py
app/api/v1/endpoints/: login_apis.py  report_apis.py  user_apis.py
app/db/: base.py
app/lib/: utils.py
app/models/: Service.py  ServiceType.py  User.py  UserBookedService.py  UserBookedServiceFeedback.py  UserServiceReport.py  __init__.py  common.py  service.py  user.py  user_booked_service_feedback.py
app/models/database_models/: base_model.py
backend/app/api/: __init__.py  login_apis.py  report_apis.py  user_apis.py
backend/app/lib/: utils.py
backend/app/models/database_models/: models.py
